
Thu Jun 13 22:14:24 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* configure.in: remove ref to ET_RULES


Thu Jun 13 14:12:16 1996  Sam Hartman  <hartmans@mit.edu>

	* update_wtmp.c (ptyint_update_wtmp): Only update wtmpx if we have
 	updwtmpx.  This probably should be more general, but I'm not
 	really sure of HP caviats.

	* configure.in :  check for updwtmpx

	* getpty.c (pty_getpty): Actually check for 256 ptys on SunOS and
 	other old-style systems.
Tue Apr 16 22:06:36 1996  Ken Raeburn  <raeburn@cygnus.com>

	* dump-utmp.c: New file.  Not automatically used by anything, but
	may be useful for examining utmp/wtmp files when comparing
	behavior against system software.

	Sun Mar 31 02:04:28 1996  Ken Raeburn  <raeburn@cygnus.com>

	* update_utmp.c (pty_update_utmp): Always use id "cons" for
	console.  For HP-UX, omit "kl" prefix.  Reindent for readability.
	* update_wtmp.c (ptyint_update_wtmp): For HP-UX, copy ut_id and
	ut_type from input utmp structure.  Reindent for readability.

	Wed Mar 27 21:14:33 1996  Marc Horowitz <marc@mit.edu>

	* init_slave.c (pty_initialize_slave): Spurious signal stuff
		which did nothing deleted.

Tue Apr 16 13:43:43 1996  Sam Hartman  <hartmans@mit.edu>

	* configure.in :  Don't use streams on HPUX.

	* getpty.c (pty_getpty): Check /dev/ptym/clone for HPUX10, only
 	try /dev/ptmx if HAVE_STREAMS defined so we can bipass for HPUX9.

Sun Apr 14 00:36:33 1996  Sam Hartman  <hartmans@mit.edu>

	* pty-int.h: Don't include sys/wait.h here.

	* configure.in : Check for waitpid.

Sat Apr 13 18:58:43 1996  Sam Hartman  <hartmans@mit.edu>

	* cleanup.c (pty_cleanup): If we are doing a vhangup, then fork
 	and dissociate on hangup.  This makes the HP happy, because there
 	is no way to get rid of a controlling terminal besides setsid() on
 	the HP.

Sun Mar 24 19:59:14 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* configure.in : Do streams handling by deciding what modules to
 	push for each system.
